--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
         <p> Desenvolvido por Gabriel</p>
      </footer>
 
+     <script type="module" src="graficos/informacoesGlobais.js"></script>
+     
 </body>
 </html>
